# xiaoclaw

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  config.example.yaml  config.yaml  install.ps1  install.sh  pyproject.toml  requirements.txt  test.py
.github/workflows/: ci.yml
docs/: API.md
scripts/: gendocs.py
skills/: weather.py
skills/etc/: SKILL.md  skill.py
skills/feishu/: SKILL.md  skill.py
skills/github/: SKILL.md  skill.py
tests/: conftest.py  docker_stress.sh  test_coverage_boost.py  test_qa_new.py  test_quality_boost.py  test_xiaoclaw.py
xiaoclaw/: __init__.py  __main__.py  analytics.py  api.py  battle.py  cli.py  core.py  errors.py  i18n.py  memory.py  plugins.py  providers.py  session.py  skills.py  spinner.py  subagent.py  tools.py  utils.py  web.py  webhook.py  webui.py
xiaoclaw/adapters/: __init__.py  discord_adapter.py  feishu.py  slack_adapter.py  telegram.py
